change reddit to search and subs to reddit

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,359 +6,19 @@ template(name='nav')
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
-            a.icon.item.users(href='/users' class="{{isActivePath '/users'}}")
+            a.icon.item.users(href='/people' class="{{isActivePath '/people'}}")
                 i.large.user.outline.grey.icon
             a.icon.item.goto_reddit(href='/reddit' class="{{isActivePath '/reddit'}}")
-                i.large.reddit.grey.icon
+                i.large.search.grey.icon
             a.icon.item.users(href='/subreddits' class="{{isActivePath '/subreddits'}}")
-                i.large.clone.grey.icon
+                i.large.reddit.grey.icon
             a.icon.item.stackexchange.clear_tags(href='/stack' class="{{isActivePath '/stack'}}")
                 i.large.stack.exchange.grey.icon
             a.icon.item.silence(href='#')
                 i.large.volume.mute.grey.icon
             // a.icon.disabled.item.goto_wikipedia(href='/wikipedia')
             //     i.large.wikipedia.icon
-            // a.icon.item.tags(href='/tags')
-            //     i.large.tags.icon
-            // a.icon.item.badges(href='/badges')
-            //     i.large.certificate.icon
-            // a.icon.item(href='/images')
-            //     i.large.image.icon
-            // a.icon.item(href='/videos')
-            //     i.large.youtube.icon
-            // a.icon.item(href='/events')
-            //     i.big.calendar.icon
-            // .ui.search.item
-            //     .ui.transparent.inverted.input
-            //         input(type='text')
-            // a.icon.disabled.item(href='/reddit')
-            //     i.big.reddit.icon
         unless connected
             .item
                 i.yin.yang.loading.big.icon
                 +status    
-        // .right.menu
-        //     if currentUser
-        //         if connected
-        //             a.icon.pointer.item.add(title='add')
-        //                 i.large.plus.icon
-        //         // if currentUser
-        //         //     a.pointer.icon.disabled.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
-        //         //         i.large.users.icon
-        //         //     a.pointer.icon.disabled.item.toggle_bookmarks(href="#" class=alert_toggle_class title='bookmark')
-        //         //         i.large.bookmark.icon
-        //         //     if connected
-        //         //         if unread_count
-        //         //             a.pointer.disabled.item.alerts(href="#" class=alert_toggle_class)
-        //         //                 i.large.bell.icon
-        //         //                 if unread_count
-        //         //                     |#{unread_count}
-        //         //         else
-        //         //             // a.icon.pointer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-        //         //             a.icon.pointer.disabled.item(href="/inbox")
-        //         //                 i.large.outline.bell.icon
-        //         // a.icon.pointer.disabled.item(href="/chat" title='chat') 
-        //         //     i.chat.outline.large.icon
-        //         // a.icon.pointer.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
-                    
-        //     // if currentUser
-        //     //     a.large.pointer.item(href="/u/#{currentUser.username}" )
-        //     //         //- i.large.user.large.icon
-        //     //         // |{{money_format currentUser.points}}c
-        //     //         |#{currentUser.points}p
-        //     //         |&nbsp;
-        //     //         if currentUser.profile_image_id
-        //     //             img.ui.avatar.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-        //     //         else 
-        //     //             i.large.user.large.icon
-        //     //         strong.mobile.hidden #{currentUser.username}
-        //     //     // a.icon.large.item.toggle_rightbar
-        //     //     //     i.bars.large.grey.icon
-        //     // else
-        //     //     a.pointer.item(href="/login" title='login')
-        //     //         i.large.sign.in.icon
-        //     //         // |enter
-    // if skv_is 'viewing_alerts' true
-    //     +topbar
-    // else if skv_is 'viewing_bookmarks' true
-    //     +bookmarkbar
-    // else if skv_is 'viewing_friends' true
-    //     +friendbar
-
-
-
-// template(name='bookmarkbar')
-//     .ui.fluid.attached.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-//         .ui.middle.aligned.selection.list.smallscroll
-//             each currentUser.bookmarks
-//                 a.item.close_bookmarkbar(href="/#{_id}}")
-//                     img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-//                     .ui.small.inline.header #{title}
-//     a.ui.attached.button.close_topbar(href="/profile")
-//         i.user.icon
-//         |profile
-        
-        
-// template(name='friendbar')
-//     // .ui.fluid.attached.inverted.blue.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-//     .ui.fluid.attached.inverted.invert.segment(class=currentUser.invert_class)
-//         // .ui.middle.aligned.selection.list.smallscroll
-//         each currentUser.friends
-//             a.ui.black.circular.tertiary.button.close_friendbar(href="/u/#{username}")
-//                 // .right.floated
-//                     // i.gift.link.icon(title="gift #{username} points") 
-//                     // .ui.icon.button(title="message #{username}") 
-//                     //     i.mail.icon
-//                 img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-//                 .ui.small.inline.inverted.header #{username}
-//     a.ui.attached.button.close_topbar(href="/inbox")
-//         i.users.icon
-//         |friends
-
-// template(name='topbar')
-//     .ui.fluid.large.attached.inverted.invert.segment(style="background-color:#{currentUser.theme_color};" class=currentUser.invert_class)
-//         .ui.middle.aligned.divided.list
-//             each recent_alerts
-//                 +recent_alert
-//     a.ui.attached.button.close_topbar(href="/inbox")
-//         i.inbox.large.icon
-//         |inbox
-// template(name='recent_alert')        
-//     .item.alert
-//         .right.floated.content
-//             i.eye.link.large.icon.mark_read(title='mark read')
-//         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-//         .content
-//             .header
-//                 |#{body} 
-//             .description #{_author.name} #{made_when}
-
-
-
-// template(name='footer')
-//     .ui.fluid.basic.attached.segment.footer
-//         .ui.container.stackable.grid
-//             .eight.wide.column
-//                 .ui.header #{connect_status.connected}
-//                 .ui.header #{connect_status.status}
-//                 with currentUser
-//                     if is_dev
-//                         +textarea_edit k='notes' d=1
-//                 if is_dev    
-//                     //with current_user
-//                     //    +role_switcher
-//                     input.old_key(type='text' placeholder='old key')
-//                     input.new_key(type='text' placeholder='new key')
-//                     .ui.button.submit_rename submit
-//             .eight.wide.column
-//                 unless currentUser
-//                     a.ui.big.basic.button(href='/login')
-//                         i.sign.in.icon
-//                         |login
-//                 if is_eric
-//                     with currentUser
-//                         +role_switcher
-//                         //+tribe_switcher
-//                 else if is_dev
-//                     with currentUser
-//                         +role_switcher
-//         if is_user
-//             .row
-//                 .ui.center.aligned.inverted.header
-//                     i.copyright.outline.icon
-//                     |dao
-                    
-                    
-// template(name='role_switcher')
-//     .ui.segment
-//         .ui.grey.inline.center.aligned.small.header 
-//             //- +i n='anonymous-mask'
-//             i.shield.icon(title='role switcher')
-//             |#{username} role switcher
-//         if is_eric
-//             //- +user_array_element_toggle k='roles' v='dev' user=currentUser
-//             +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
-//         if current_userh
-//             with current_user
-//                 +multi_doc_edit k='roles' l='roles' ref_model='role' d=1
-//         //- +user_array_element_toggle k='roles' v='dev' user=currentUser
-//         //- +user_array_element_toggle k='roles' v='user' user=currentUser
-//         //- +user_array_element_toggle k='roles' v='staff' user=currentUser
-//         //- +user_array_element_toggle k='roles' v='resident' user=currentUser
-//         //- +user_array_element_toggle k='roles' v='owner' user=currentUser
-// template(name='chatpop')
-//     if viewing_chat
-//         +view_chatpop
-//     else 
-//         .ui.large.icon.basic.circular.button.open_chat
-//             i.chat.outline.large.icon
-
-// template(name='view_chatpop')
-//     .chatpop.invert
-//         a.ui.invert.pointer.grey.header.close_chat 
-//             i.chat.icon
-//             |chat
-//         .ui.large.list.medcroll
-//             each last_messages
-//                 .item 
-//                     if bot
-//                         i.brain.inline.grey.icon
-//                         strong #{response.result}
-//                     else
-//                         strong #{body} 
-//                     small.ui.grey.text #{when}
-//         .ui.fluid.icon.transparent.input 
-//             i.plus.icon
-//             input.add_chat(type='text' placeholder='chat...')
-
-
-
-            
-            
-            
-// template(name='rightbar')
-//     .ui.right.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};" class=currentUser.invert_class)
-//         // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
-//         //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
-//         //     |#{currentUser.name}
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
-//             | dashboard (#{currentUser.points}p)
-//             i.large.dashboard.icon
-        
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
-//             | about
-//             i.large.info.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
-//             | #{currentUser.total_credit_amount}p received
-//             i.large.chevron.down.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
-//             | #{currentUser.total_debit_amount}k out
-//             i.large.chevron.up.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
-//             | events
-//             i.large.calendar.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
-//             | requests
-//             i.large.concierge.bell.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
-//             | orders
-//             i.large.cart.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
-//             | offers
-//             i.large.hand.holding.heart.icon
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
-//             | chat
-//             i.chat.icon
-//         .ui.divider
-//         a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
-//             i.cog.large.icon
-//             |settings
-//         a.item.toggle_nightmode.toggle_rightbar(href="#")
-//             i.lightbulb.large.icon
-//             |dark mode
-//         a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
-//             |logout
-//             if is_logging_out
-//                 i.refresh.loading.icon
-//             else
-//                 i.sign.out.icon
-
-
-
-template(name='leftbar')
-    .ui.left.sidebar.vertical.menu(class=currentUser.invert_class)
-        // a.item.toggle_leftbar(href="/" class="{{isActivePath '/'}}")
-        //     i.yin.yang.icon
-        //     | dao
-        each stack_sites
-            a.item.toggle_leftbar(href="/site/#{api_site_parameter}" class="{{isActiveRoute 'user_dashboard'}}")
-                img(src=logo_url class=currentUser.invert_class)
-                // | #{name}
-        // a.item.toggle_leftbar(href="/finance" class="{{isActivePath '/finance'}}")
-        //     i.money.icon
-        //     | finance
-        // a.item.toggle_leftbar(href="/settings" class="{{isActivePath '/settings'}}")
-        //     i.cog.icon
-        //     | settings
-        // .divider
-        // a.item.toggle_leftbar(href='/web' class="{{isActivePath '/web'}}")
-        //     i.large.globe.grey.icon
-        //     |web
-        // a.item.toggle_leftbar(href='/events' class="{{isActivePath '/events'}}")
-        //     i.large.calendar.grey.icon
-        //     |events
-        // a.item.toggle_leftbar(href='/reddit' class="{{isActivePath '/reddit'}}")
-        //     i.large.reddit.grey.icon
-        //     |reddit
-        // a.item.toggle_leftbar(href='/stack' class="{{isActivePath '/stack'}}")
-        //     i.large.stack.exchange.grey.icon
-        //     |stackexchange
-        // a.item.toggle_leftbar(href='/wikipedia' class="{{isActivePath '/wikipedia'}}")
-        //     i.large.wikipedia.grey.icon
-        //     |wikipedia
-        // a.item.toggle_leftbar(href='/questions' class="{{isActivePath '/questions'}}")
-        //     i.large.question.grey.icon
-        //     |questions
-        // a.item.toggle_leftbar(href='/m/model' class="{{isActivePath '/m/model'}}")
-        //     i.large.database.grey.icon
-        //     |database
-        // a.item.toggle_sidebar.zoom(href="/m/meal" class="{{isActivePath '/m/meal'}}")
-        //     i.large.food.icon
-        //     |food
-        // // a.item.toggle_sidebar.zoom.set_bug(href="/m/bug" class="{{isActivePath '/m/bug'}}")
-        // //     i.large.bug.icon
-        // //     |bugs
-        // // a.icon.item.toggle_sidebar.zoom.set_photo(href="/m/photo" class="{{isActivePath '/m/photo'}}" title='photos')
-        // //     i.large.large.picture.icon
-        // //     |photos  
-        // a.zoom.icon.item.toggle_sidebar.zoom.set_expense(href="/m/expense" class="{{isActivePath '/m/expense'}}" title='expenses')
-        //     i.large.dollar.icon
-        //     |expenses            
-        // .divider
-        // a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
-        //     | chat
-        //     i.chat.icon
-        // a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
-        //     |leads
-        //     i.telephone.icon
-        // a.item.toggle_leftbar(href="/projects" class="{{isActivePath '/projects'}}" title='chat') 
-        //     |projects
-        //     i.tasks.icon
-        // a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
-        //     |invoices
-        //     i.invoice.icon
-        // if is_eric
-        //     a.icon.item.toggle_dev.toggle_leftbar
-        //         |toggle dev
-        //         if is_dev
-        //             i.code.blue.large.icon
-        //         else
-        //             i.code.large.icon
-        // if is_in_admin
-        //     a.icon.item.toggle_admin.toggle_leftbar
-        //         |toggle admin
-        //         if is_admin
-        //             i.shield.blue.large.icon
-        //         else
-        //             i.shield.large.icon
-            
-        // if is_admin
-        //     a.item.toggle_leftbar.set_badge(href="/m/badge" class="{{isActivePath 'badges'}}")
-        //         i.certificate.blue.icon
-        //         | badges
-        //     a.item.toggle_leftbar.set_debit(href="/m/debit" class="{{isActivePath regex='rentals'}}")
-        //         i.gift.blue.icon
-        //         |gifts
-        //     .divider
-        //     a.item.toggle_leftbar.set_project(href="/m/project" class="{{isActivePath regex='projects'}}")
-        //         i.tasks.blue.icon
-        //         | projects
-        //     a.item.toggle_leftbar(href="/m/room" class="{{isActiveRoute 'requests'}}")
-        //         i.building.blue.icon
-        //         |rooms
-        //     a.blue.item.set_model.toggle_leftbar(href="/m/model" class="{{isActivePath '/m/model'}}")
-        //         |admin
-        //         i.database.blue.icon
-        //     a.item.set_user.toggle_leftbar(href="/m/user" class="{{isActiveRoute '/m/user'}}")
-        //         i.blue.users.icon
-        //         | all users
