search return with prefilter, show images embed in reddit card, ux,

--- a/client/dao.jade
+++ b/client/dao.jade
@@ -343,8 +343,8 @@ template(name='pull_reddit')
         i.reddit.icon
         
 template(name='call_watson')
-    .ui.icon.button.pull
-        i.dna.icon
+    .ui.icon.massive.circular.basic.button.pull
+        i.dna.large.teal.icon
 
 template(name='convert')
     .ui.icon.button.convert
