--- a/client/people.jade
+++ b/client/people.jade
@@ -30,10 +30,10 @@ template(name='people')
                 .ui.compact.basic.circular.button.select_site(class=cloud_site_class) 
                     |!{this.name}
                     small #{count}
-            // .spacer
+            .spacer
             .ui.grey.inline.header 
                 i.marker.icon
-                |location
+                // |location
             if selected_user_location
                 .unselect_location.ui.primary.compact.circular.button
                     strong !{selected_user_location}
@@ -41,6 +41,7 @@ template(name='people')
                 +tag_selector
                 // .ui.compact.basic.circular.button.select_location(class=cloud_location_class) !{this.name}
                 //     small #{this.count}
+        .twelve.wide.column.scrolling
             .ui.left.icon.input
                 i.user.icon
                 input.search_username(type='text' placeholder='username')
@@ -50,7 +51,6 @@ template(name='people')
                 else
                     i.marker.link.icon.clear_location
                 input.search_location(type='text' placeholder='location' value=current_location_query)
-        .twelve.wide.column.scrolling
             .ui.five.stackable.centered.cards.scrolling
                 each users
                     a.ui.card.select_user(href="/site/#{site}/user/#{user_id}")
