--- a/client/reddit_doc.jade
+++ b/client/reddit_doc.jade
@@ -28,15 +28,15 @@ template(name="reddit_doc")
                     // unless one_post
                     //     i.chevron.right.big.grey.link.icon.forward
                 if viewing_doc
-                    .ui.icon.basic.button.vote_down
-                        i.thumbs.down.big.grey.icon
-                    .ui.icon.basic.button.vote_up
-                        i.thumbs.up.big.grey.icon
-                    .ui.big.basic.button.read 
-                        i.rss.icon
-                        |read
-                    .ui.icon.button.bookmark
-                        i.bookmark.icon
+                    // .ui.icon.basic.button.vote_down
+                    //     i.thumbs.down.big.grey.icon
+                    // .ui.icon.basic.button.vote_up
+                    //     i.thumbs.up.big.grey.icon
+                    // .ui.big.basic.button.read 
+                    //     i.rss.icon
+                    //     |read
+                    // .ui.icon.button.bookmark
+                    //     i.bookmark.icon
                     
                     // if is_image
                     //     img.ui.centered.image(src=url)
@@ -81,10 +81,11 @@ template(name="reddit_doc")
                     // pre
                     // .nl2br
                     // if viewing
-                    .spacer
+                    // .spacer
                     +skve k='doc_section' v='main' l='main' i='content'
                     if skv_is 'doc_section' 'main'
-                        +call_watson
+                        unless watson
+                            +call_watson
                         if watson    
                             unless tone
                                 +call_tone    
@@ -102,7 +103,7 @@ template(name="reddit_doc")
                         //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
                         // |{{selftext}}
                         // +convert
-                    .spacer
+                    // .spacer
                     a.ui.icon.big.basic.button(href=url target='_window' title=domain)
                         i.external.icon
                         |view site 
@@ -121,4 +122,5 @@ template(name="reddit_doc")
                     .ui.icon.input
                         i.plus.grey.icon
                         input.tag_post(type='text')
-                    i.code.link.icon.print_me
+                    if in_dev
+                        +print_this
