--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,11 +6,11 @@ template(name='nav')
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
-            a.icon.item.users(href='/people' class="{{isActivePath '/people'}}")
+            a.icon.item.users(href='/people' class="{{isActivePath regex='people'}}")
                 i.large.user.outline.grey.icon
-            a.icon.item.goto_reddit(href='/reddit' class="{{isActivePath '/reddit'}}")
+            a.icon.item.goto_reddit(href='/reddit' class="{{isActivePath regex='reddit'}}")
                 i.large.search.grey.icon
-            a.icon.item.users(href='/subreddits' class="{{isActivePath '/subreddits'}}")
+            a.icon.item.users(href='/subreddits' class="{{isActivePath regex='subreddits'}}")
                 i.large.reddit.grey.icon
             a.icon.item.stackexchange.clear_tags(href='/stack' class="{{isActivePath '/stack'}}")
                 i.large.stack.exchange.grey.icon
