--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -47,7 +47,7 @@ template(name='site_users')
                         // .item #{site_state} site_state
                         // .item #{high_resolution_icon_url} high_resolution_icon_url
                         // .item #{favicon_url} favicon_url
-                        .item #{audience}
+                        .item !{audience}
                         // .item #{api_site_parameter} api_site_parameter
                         // .item #{site_type} site_type
                     // +array_edit k='tags' d=true
