--- a/client/people.jade
+++ b/client/people.jade
@@ -30,6 +30,9 @@ template(name='people')
                 .ui.compact.basic.circular.button.select_site(class=cloud_site_class) 
                     |!{this.name}
                     small #{count}
+            unless all_sites.count
+                .ui.basic.center.aligned.segment
+                    i.massive.loading.grey.yin.yang.icon
             .spacer
             .ui.grey.inline.header 
                 i.marker.icon
@@ -51,7 +54,11 @@ template(name='people')
                 else
                     i.marker.link.icon.clear_location
                 input.search_location(type='text' placeholder='location' value=current_location_query)
+            .spacer
             .ui.five.stackable.centered.cards.scrolling
+                unless users.count
+                    .ui.basic.center.aligned.segment
+                        i.massive.loading.grey.yin.yang.icon
                 each users
                     a.ui.card.select_user(href="/site/#{site}/user/#{user_id}")
                         img.ui.fluid.image(src=profile_image class=currentUser.invert_class)
@@ -65,10 +72,10 @@ template(name='people')
                                     strong(title='global rank') ##{global_rank}
 
                                 |#{site}
-                                i.grey.marker.icon
-                                |#{location}
+                                // i.grey.marker.icon
+                                |!{location}
                                 each five_tags
-                                    .ui.basic.small.label #{this}
+                                    .ui.small.tertiary.disabled.button #{this}
                                 // +doc_emotion_small
                                 |#{main_emotion}
                                 
